<resources>
    <string name="app_name">Smart Sleep</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="sound">Sound</string>
    <string name="oxygen">Oxygen Levels</string>
    <string name="temperature">Temperature</string>
    <string name="motion">Motion</string>

    <string name="preference_file_key">com.example.smartsleep.PREFERENCE_FILE_KEY</string>


    <!-- BLUETOOTH STRINGS -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- BLUETOOTH GATT CHARACTERISTIC STRINGS -->
    <string name="HR">00002a37-0000-1000-8000-00805f9b34fb</string>
    <string name="O2">00002a19-0000-1000-8000-00805f9b34fb</string>
    <string name="SOUND">d7ba322c-8209-11eb-8dcd-0242ac130003</string>
    <string name="MOTION">d7ba37fe-8209-11eb-8dcd-0242ac130003</string>
    <string name="TEMP">d7ba345c-8209-11eb-8dcd-0242ac130003</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>