<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heart_rate"
        style="@style/sensorCard"
        android:text="@string/heart_rate" />

    <TextView
        android:id="@+id/oxygen"
        style="@style/sensorCard"
        android:text="@string/oxygen" />

    <TextView
        android:id="@+id/motion"
        style="@style/sensorCard"
        android:text="@string/motion" />

    <TextView
        android:id="@+id/temperature"
        style="@style/sensorCard"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/sound"
        style="@style/sensorCard"
        android:text="@string/sound" />

</LinearLayout>



